device listing page ui

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #9b8e83; }
+  background: #ab6397; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #064a9f; }
+  background: #741f64; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9afe85; }
+  background: #5814f3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #12abf3; }
+  background: #d1e2c3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #194f2c; }
+  background: #3e95e7; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9c83e8; }
+  background: #151b28; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6aa9af; }
+  background: #d9be14; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #399ac8; }
+  background: #f934a1; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #12744e; }
+  background: #b6ee30; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #c11117; }
+  background: #e2fd3d; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #918989; }
+  background: #fdfe2e; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #fcb583; }
+  background: #12cbb0; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d985cf; }
+  background: #7e382f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3bc604; }
+  background: #8bcdd5; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6a5b03; }
+  background: #385189; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6111e3; }
+  background: #f4f6a0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #96a3b4; }
+  background: #6d9484; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ff581f; }
+  background: #eff2d2; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e3df52; }
+  background: #cd4fca; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #344339; }
+  background: #703019; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #11f197; }
+  background: #354648; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #9f076d; }
+  background: #0eea24; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #afdf76; }
+  background: #57de98; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #caa928; }
+  background: #28b8ef; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #49888c; }
+  background: #250be5; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #33db13; }
+  background: #72295d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #896410; }
+  background: #fa3d83; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #76c46c; }
+  background: #be73c6; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #626659; }
+  background: #74f1d5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #52f348; }
+  background: #21d7f2; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b9c120; }
+  background: #d78745; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #dc5964; }
+  background: #2ac5a9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2ed0f1; }
+  background: #ec9afc; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #159e51; }
+  background: #0a2ef7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b72824; }
+  background: #232556; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #80f990; }
+  background: #6638ee; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #c3c945; }
+  background: #d27670; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #f9956f; }
+  background: #0d79ab; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bdc7b0; }
+  background: #aff3ec; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1e07cb; }
+  background: #e9257e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e6cb8c; }
+  background: #9a1f14; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #1df596; }
+  background: #5a3015; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #905386; }
+  background: #d28f8d; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f7f6ea; }
+  background: #1ac5e8; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9c787e; }
+  background: #ed4511; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a9d6f7; }
+  background: #efb342; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c15f38; }
+  background: #6cd569; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #aa0462; }
+  background: #62410f; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8363f7; }
+  background: #b5ad7a; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2966c4; }
+  background: #ab7895; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #784810; }
+  background: #e45606; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d0060d; }
+  background: #1450b0; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #214f28; }
+  background: #3cf6b0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #036a62; }
+  background: #8e5f33; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #0fb67d; }
+  background: #e1ad2c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #260767; }
+  background: #51b916; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b04d99; }
+  background: #8684b1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c35f2c; }
+  background: #97b1b5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #38bb87; }
+  background: #b268e2; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e4c5b8; }
+  background: #3e9130; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #19b49d; }
+  background: #4299bf; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d40dc5; }
+  background: #11128a; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1c5b63; }
+  background: #cc5e88; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #0b9ae0; }
+  background: #e8f882; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #68b9ff; }
+  background: #1c15b8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #bf8c87; }
+  background: #d762f8; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #076331; }
+  background: #ba440e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #24941c; }
+  background: #bd8122; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #3872b3; }
+  background: #669687; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #6809f2; }
+  background: #6de27f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #7709eb; }
+  background: #ea33ab; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #45ba8f; }
+  background: #190e34; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e4728c; }
+  background: #d235d1; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #27c5b0; }
+  background: #d61438; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8fa051; }
+  background: #fc0712; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #c54034; }
+  background: #b0b4d4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2ae730; }
+  background: #038ffb; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d75af1; }
+  background: #864058; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a13948; }
+  background: #847468; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b30c79; }
+  background: #5b12c5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #094407; }
+  background: #b3b65f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #adc331; }
+  background: #a2ffb1; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2c0dd4; }
+  background: #3ca2fa; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d170ff; }
+  background: #297193; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e343db; }
+  background: #7744fc; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9456bb; }
+  background: #bf520b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3413ac; }
+  background: #97f4d8; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c80cb0; }
+  background: #fa2297; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d6130a; }
+  background: #f8f214; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #26f82e; }
+  background: #273987; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2b7d58; }
+  background: #8c9cf6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #017265; }
+  background: #506bbc; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #adb557; }
+  background: #ef7630; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5bb08f; }
+  background: #2d528a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #460174; }
+  background: #f32154; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #edd149; }
+  background: #aa2f9a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b008ab; }
+  background: #98b8f3; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ad1faa; }
+  background: #d11e97; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #395307; }
+  background: #b03b11; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #17d8a2; }
+  background: #7ebffa; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12448,6 +12448,9 @@ yx-axis
   border: none;
   border-radius: 5px; }
 
+select {
+  font-family: "proxima-regular" !important; }
+
 li.current {
   z-index: 1;
   clip: rect(0, 100vw, 100vh, 0); }
@@ -12957,11 +12960,15 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -13656,12 +13663,12 @@ input:checked + .sliders-Not .not-blue-bg {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
     position: absolute;
-    width: 226px;
+    width: 95%;
     padding: 15px;
     background: #fff;
     z-index: 2;
-    top: 38px;
-    left: 6px; }
+    top: 40px;
+    left: 0px; }
   .multiselect .dropdown-search-bar {
     border-radius: 5px;
     border: 1px #dadada solid;
@@ -14007,13 +14014,14 @@ td .check-container {
     margin-bottom: 18px;
     font-size: 16px; }
   .field-section-wrapper p {
-    color: #4C4C4C;
+    color: #4c4c4c;
     margin-bottom: 5px; }
     .field-section-wrapper p input {
       margin-right: 5px; }
   .field-section-wrapper .custom-select {
     background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
-    background-color: #fff; }
+    background-color: #fff;
+    font-family: "proxima-regular" !important; }
   .field-section-wrapper .form-group {
     width: 75%; }
   .field-section-wrapper .frequency-dropdown-div {
@@ -14022,14 +14030,15 @@ td .check-container {
     margin: 15px 0px; }
     .field-section-wrapper .frequency-dropdown-div p {
       flex: 1;
-      min-width: 100%;
+      min-width: 50%;
       margin-left: 10px; }
   .field-section-wrapper .hrs-select-group {
     display: flex;
     margin-top: 10px; }
     .field-section-wrapper .hrs-select-group .custom-select {
-      min-width: 75px;
-      margin-right: 10px; }
+      min-width: 70px;
+      margin-right: 10px;
+      font-family: "proxima-regular"; }
       .field-section-wrapper .hrs-select-group .custom-select:last-child {
         margin-right: 0px; }
   .field-section-wrapper .week-check-boxs-wrapper {
@@ -14037,12 +14046,12 @@ td .check-container {
     display: flex; }
     .field-section-wrapper .week-check-boxs-wrapper a {
       padding: 11px;
-      background: #FFFFFF;
-      border: 1px solid #C4C4C4;
+      background: #ffffff;
+      border: 1px solid #c4c4c4;
       box-sizing: border-box;
       margin-right: auto;
       border-radius: 50%;
-      color: #4C4C4C;
+      color: #4c4c4c;
       min-width: 40px;
       height: 40px;
       font-size: 16px;
@@ -14053,8 +14062,8 @@ td .check-container {
       .field-section-wrapper .week-check-boxs-wrapper a:first-child {
         margin-left: 0px; }
     .field-section-wrapper .week-check-boxs-wrapper .week-active {
-      background: #A9A5FD;
-      border: 1px solid #A9A5FD;
+      background: #a9a5fd;
+      border: 1px solid #a9a5fd;
       color: #fff; }
 
 .notification-dropdow-div {
@@ -14331,7 +14340,7 @@ table .parent-row,
   margin-top: 10px;
   flex: 1; }
   .new-search-bar-wrapper .search-wrap::before {
-    right: 12px;
+    left: 12px;
     margin: auto 0 auto auto; }
   .new-search-bar-wrapper .search-right-bar {
     width: 250px;
@@ -14347,9 +14356,11 @@ table .parent-row,
       padding: 10px;
       height: 40px;
       margin-right: 15px;
-      color: #000;
+      color: #4c4c4c;
       width: 100%;
-      border: 0px solid #000; }
+      border: 0px solid #4c4c4c;
+      font-family: "proxima-regular" !important;
+      font-weight: normal !important; }
 
 .list-view-hover-wrapper {
   background: #fff;
@@ -14481,7 +14492,10 @@ table .parent-row,
   padding: 3px 8px;
   margin-bottom: 5px; }
 
-.columns-order-div .dropdwon-contents-bottom .dropdown-connectors-list li:hover {
+.columns-order-div
+.dropdwon-contents-bottom
+.dropdown-connectors-list
+li:hover {
   background: #f6f6f6 !important;
   padding: 3px 8px;
   margin-bottom: 5px; }
@@ -14490,9 +14504,54 @@ table .parent-row,
   position: relative;
   display: flex; }
   .sliding-section .sliding-left-section {
-    width: 30%; }
+    min-width: 0px;
+    display: none; }
+    .sliding-section .sliding-left-section .device-filterleft-bar {
+      margin-top: 155px; }
+      .sliding-section .sliding-left-section .device-filterleft-bar .filter-icon-group {
+        margin-right: 6px;
+        width: 15px;
+        height: 12px; }
+    .sliding-section .sliding-left-section .nav-pills .nav-link {
+      text-decoration: none;
+      color: #4c4c4c;
+      margin: 12px 0px;
+      padding: 15px; }
+      .sliding-section .sliding-left-section .nav-pills .nav-link .filter-arrow-left-icon {
+        float: right;
+        margin-top: 4px; }
+    .sliding-section .sliding-left-section .nav-pills .nav-link.active {
+      color: #4c4c4c;
+      background-color: #fff; }
   .sliding-section .sliding-right-section {
-    width: 100%; }
+    width: 100%;
+    position: relative; }
+    .sliding-section .sliding-right-section .scren-slide-icon {
+      position: absolute;
+      top: 76px;
+      left: -33px;
+      z-index: 5; }
+
+.slid-screen-wrapper .sliding-left-section {
+  display: block;
+  min-width: 232px;
+  position: relative;
+  -moz-transition: all 300ms;
+  -webkit-transition: all 300ms;
+  transition: all 300ms; }
+  .slid-screen-wrapper .sliding-left-section .tab-content {
+    position: absolute;
+    top: 120px;
+    left: 232px;
+    z-index: 8;
+    width: 68vw;
+    background: #fff;
+    padding: 20px; }
+.slid-screen-wrapper .sliding-right-section {
+  width: calc(100% - 232px);
+  -moz-transition: all 300ms;
+  -webkit-transition: all 300ms;
+  transition: all 300ms; }
 
 .device-list-main-top {
   display: flex; }
@@ -14525,6 +14584,12 @@ table .parent-row,
   width: 25px;
   height: 25px;
   border: 1px solid #e2e2e2; }
+
+input,
+textarea,
+select,
+option {
+  font-family: "proxima-regular"; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
