--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -70,7 +70,7 @@
   margin: 1rem 0rem;
 }
 
-.center-y h3+a {
+.center-y h3 + a {
   font-size: 1.6rem;
   display: inline-block;
   color: #000;
@@ -99,8 +99,12 @@
   border-radius: 5px;
 }
 
+select {
+  font-family: "proxima-regular" !important;
+}
+
 h3,
-h3+a {
+h3 + a {
   // opacity: 0;
   // -webkit-transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
   // transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
@@ -111,7 +115,7 @@ h3+a {
 }
 
 li.current h3,
-li.current h3+a {
+li.current h3 + a {
   // opacity: 1;
   // -webkit-transition-delay: 1s;
   // transition-delay: 1s;
@@ -189,7 +193,6 @@ li.prev {
 
 .modal-add-connections-wrapper,
 .LoginPanel {
-
   input[type="text"],
   input[type="password"],
   textarea {
@@ -209,7 +212,8 @@ li.prev {
     line-height: 1em;
     width: 100%;
     -moz-appearance: none;
-    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97% 13px;
+    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97%
+      13px;
     box-sizing: border-box;
     cursor: pointer;
   }
@@ -262,7 +266,7 @@ li.prev {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.LoginPanel .fieldsBotSection input[type="checkbox"]:checked+label {
+.LoginPanel .fieldsBotSection input[type="checkbox"]:checked + label {
   background-image: url(../images/checkbox-img.png);
 }
 
@@ -275,7 +279,7 @@ li.prev {
   right: 22px;
 }
 
-.LoginPanel .login-pass-div input[type="checkbox"]:checked+label {
+.LoginPanel .login-pass-div input[type="checkbox"]:checked + label {
   background-image: url(../images/eye-dark.png);
 }
 
@@ -602,15 +606,15 @@ input[type="submit"] {
   transition: 0.4s;
 }
 
-input:checked+.sliders {
+input:checked + .sliders {
   background-color: #776fff;
 }
 
-input:focus+.sliders {
+input:focus + .sliders {
   box-shadow: 0 0 1px #776fff;
 }
 
-input:checked+.sliders:before {
+input:checked + .sliders:before {
   -webkit-transform: translateX(20px);
   -ms-transform: translateX(20px);
   transform: translateX(20px);
@@ -686,7 +690,7 @@ input:checked+.sliders:before {
 }
 
 .table-icon span,
-.table-icon span+span {
+.table-icon span + span {
   letter-spacing: 4px;
   font-size: 18px;
 }
@@ -736,12 +740,16 @@ input:checked+.sliders:before {
   padding-left: 35px;
 }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+  .adding-adapter-modal-header
+  .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important;
 }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+  .adding-adapter-modal-header
+  .adapter-modal-name {
   font-size: 20px !important;
 }
 
@@ -754,7 +762,7 @@ input:checked+.sliders:before {
   width: 100%;
 }
 
-.modal-add-connections-wrapper .adapter-modal-bottom-row div+div {
+.modal-add-connections-wrapper .adapter-modal-bottom-row div + div {
   margin-right: 0px;
 }
 
@@ -934,8 +942,8 @@ input:checked+.sliders:before {
     font-size: 14px;
   }
 
-  .dropdown-with-img-select div+div,
-  .dropdown-with-logos div+div {
+  .dropdown-with-img-select div + div,
+  .dropdown-with-logos div + div {
     font-size: 12px;
   }
 
@@ -1251,11 +1259,11 @@ input:checked+.sliders:before {
   background: dodgerblue;
 }
 
-.list-ic .active~li {
+.list-ic .active ~ li {
   background: lightblue;
 }
 
-.list-ic .active~li::before {
+.list-ic .active ~ li::before {
   background: lightblue;
 }
 
@@ -1520,15 +1528,15 @@ ul li:last-child {
   transition: 0.4s;
 }
 
-input:checked+.sliderss {
+input:checked + .sliderss {
   background-color: #776fff;
 }
 
-input:focus+.sliderss {
+input:focus + .sliderss {
   box-shadow: 0 0 1px #776fff;
 }
 
-input:checked+.sliderss:before {
+input:checked + .sliderss:before {
   -webkit-transform: translateX(44px);
   -ms-transform: translateX(44px);
   transform: translateX(44px);
@@ -1550,7 +1558,7 @@ input:checked+.sliderss:before {
   font-family: Verdana, sans-serif;
 }
 
-input:checked+.sliderss .on {
+input:checked + .sliderss .on {
   display: block;
   font-size: 14px;
   padding-left: 10px;
@@ -1558,7 +1566,7 @@ input:checked+.sliderss .on {
   left: 26%;
 }
 
-input:checked+.sliderss .off {
+input:checked + .sliderss .off {
   display: none;
 }
 
@@ -1599,11 +1607,11 @@ input:checked+.sliderss .off {
     transition: 0.4s;
   }
 
-  input:checked+.sliders-Not {
+  input:checked + .sliders-Not {
     background-color: #776fff;
   }
 
-  input:focus+.sliders-Not {
+  input:focus + .sliders-Not {
     box-shadow: 0 0 1px #776fff;
   }
 }
@@ -1637,7 +1645,7 @@ input:checked+.sliderss .off {
   margin-right: 10px;
 }
 
-input:checked+.sliders-Not .not-white-bg {
+input:checked + .sliders-Not .not-white-bg {
   display: block;
   color: #fff;
   background-color: #776fff;
@@ -1648,7 +1656,7 @@ input:checked+.sliders-Not .not-white-bg {
   // left: 26%;
 }
 
-input:checked+.sliders-Not .not-blue-bg {
+input:checked + .sliders-Not .not-blue-bg {
   display: none;
 }
 
@@ -1745,12 +1753,12 @@ input:checked+.sliders-Not .not-blue-bg {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
     position: absolute;
-    width: 226px;
+    width: 95%;
     padding: 15px;
     background: #fff;
     z-index: 2;
-    top: 38px;
-    left: 6px;
+    top: 40px;
+    left: 0px;
   }
 
   .dropdown-search-bar {
@@ -1833,14 +1841,14 @@ input:checked+.sliders-Not .not-blue-bg {
 }
 
 /* On mouse-over, add a grey background color */
-.check-container:hover input~.checkmark {
+.check-container:hover input ~ .checkmark {
   background-color: #fff;
   border: 1px solid #717171;
   border-radius: 6px;
 }
 
 /* When the checkbox is checked, add a blue background */
-.check-container input:checked~.checkmark {
+.check-container input:checked ~ .checkmark {
   background-color: #717171;
   border: 1px solid #717171;
   border-radius: 6px;
@@ -1854,7 +1862,7 @@ input:checked+.sliders-Not .not-blue-bg {
 }
 
 /* Show the checkmark when checked */
-.check-container input:checked~.checkmark:after {
+.check-container input:checked ~ .checkmark:after {
   display: block;
 }
 
@@ -1904,14 +1912,14 @@ td {
     font-family: Verdana, sans-serif;
   }
 
-  input:checked+.sliderss .on {
+  input:checked + .sliderss .on {
     display: block;
     font-size: 14px;
     padding-left: 10px;
     left: 10%;
   }
 
-  input:checked+.sliderss::before {
+  input:checked + .sliderss::before {
     -webkit-transform: translateX(57px);
     -ms-transform: translateX(57px);
     transform: translateX(57px);
@@ -2065,12 +2073,12 @@ td {
 /* Create a custom checkbox */
 
 /* On mouse-over, add a grey background color */
-.container-custom-checkbox:hover input~.checkmark {
+.container-custom-checkbox:hover input ~ .checkmark {
   background-color: #ccc;
 }
 
 /* When the checkbox is checked, add a blue background */
-.container-custom-checkbox input:checked~.checkmark {
+.container-custom-checkbox input:checked ~ .checkmark {
   background-color: #776fff;
   border: 1px solid #776fff;
 }
@@ -2078,7 +2086,7 @@ td {
 /* Create the checkmark/indicator (hidden when not checked) */
 
 /* Show the checkmark when checked */
-.container-custom-checkbox input:checked~.checkmark:after {
+.container-custom-checkbox input:checked ~ .checkmark:after {
   display: block;
 }
 
@@ -2114,7 +2122,7 @@ td {
   margin-bottom: 0px !important;
 }
 
-.box-bottom-bar .field-check-box input[type="checkbox"]:checked+label {
+.box-bottom-bar .field-check-box input[type="checkbox"]:checked + label {
   background-image: url(../images/enable-check.png);
 }
 
@@ -2174,7 +2182,8 @@ td {
         font-size: 14px;
       }
 
-      h3 {}
+      h3 {
+      }
 
       .color-text {
         margin-top: 5px;
@@ -2222,7 +2231,7 @@ td {
   }
 
   p {
-    color: #4C4C4C;
+    color: #4c4c4c;
     margin-bottom: 5px;
 
     input {
@@ -2231,8 +2240,10 @@ td {
   }
 
   .custom-select {
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e")
+      no-repeat right 0.75rem center/10px 20px;
     background-color: #fff;
+    font-family: "proxima-regular" !important;
   }
 
   .form-group {
@@ -2246,7 +2257,7 @@ td {
 
     p {
       flex: 1;
-      min-width: 100%;
+      min-width: 50%;
       margin-left: 10px;
     }
   }
@@ -2256,8 +2267,9 @@ td {
     margin-top: 10px;
 
     .custom-select {
-      min-width: 75px;
+      min-width: 70px;
       margin-right: 10px;
+      font-family: "proxima-regular";
 
       &:last-child {
         margin-right: 0px;
@@ -2271,12 +2283,12 @@ td {
 
     a {
       padding: 11px;
-      background: #FFFFFF;
-      border: 1px solid #C4C4C4;
+      background: #ffffff;
+      border: 1px solid #c4c4c4;
       box-sizing: border-box;
       margin-right: auto;
       border-radius: 50%;
-      color: #4C4C4C;
+      color: #4c4c4c;
       min-width: 40px;
       height: 40px;
       font-size: 16px;
@@ -2293,8 +2305,8 @@ td {
     }
 
     .week-active {
-      background: #A9A5FD;
-      border: 1px solid #A9A5FD;
+      background: #a9a5fd;
+      border: 1px solid #a9a5fd;
       color: #fff;
     }
   }
@@ -2664,7 +2676,7 @@ table .parent-row,
 
   .search-wrap {
     &::before {
-      right: 12px;
+      left: 12px;
       margin: auto 0 auto auto;
     }
   }
@@ -2684,9 +2696,11 @@ table .parent-row,
       padding: 10px;
       height: 40px;
       margin-right: 15px;
-      color: #000;
+      color: #4c4c4c;
       width: 100%;
-      border: 0px solid #000;
+      border: 0px solid #4c4c4c;
+      font-family: "proxima-regular" !important;
+      font-weight: normal !important;
     }
   }
 }
@@ -2890,7 +2904,10 @@ table .parent-row,
   margin-bottom: 5px;
 }
 
-.columns-order-div .dropdwon-contents-bottom .dropdown-connectors-list li:hover {
+.columns-order-div
+  .dropdwon-contents-bottom
+  .dropdown-connectors-list
+  li:hover {
   background: #f6f6f6 !important;
   padding: 3px 8px;
   margin-bottom: 5px;
@@ -2901,11 +2918,75 @@ table .parent-row,
   display: flex;
 
   .sliding-left-section {
-    width: 30%;
+    min-width: 0px;
+    display: none;
+
+    .device-filterleft-bar {
+      margin-top: 155px;
+
+      .filter-icon-group {
+        margin-right: 6px;
+        width: 15px;
+        height: 12px;
+      }
+    }
+
+    .nav-pills .nav-link {
+      text-decoration: none;
+      color: #4c4c4c;
+      margin: 12px 0px;
+      padding: 15px;
+
+      .filter-arrow-left-icon {
+        float: right;
+        margin-top: 4px;
+      }
+    }
+
+    .nav-pills .nav-link.active {
+      color: #4c4c4c;
+      background-color: #fff;
+    }
   }
 
   .sliding-right-section {
     width: 100%;
+    position: relative;
+
+    .scren-slide-icon {
+      position: absolute;
+      top: 76px;
+      left: -33px;
+      z-index: 5;
+    }
+  }
+}
+
+.slid-screen-wrapper {
+  .sliding-left-section {
+    display: block;
+    min-width: 232px;
+    position: relative;
+    -moz-transition: all 300ms;
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
+
+    .tab-content {
+      position: absolute;
+      top: 120px;
+      left: 232px;
+      z-index: 8;
+      width: 68vw;
+      background: #fff;
+      padding: 20px;
+    }
+  }
+
+  .sliding-right-section {
+    width: calc(100% - 232px);
+    -moz-transition: all 300ms;
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
   }
 }
 
@@ -2940,9 +3021,11 @@ table .parent-row,
   .child-row {
     td {
       background: #f6f6f6;
-      background-image: linear-gradient(to right,
-          #e2e2e2 70%,
-          rgba(255, 255, 255, 0) 0%);
+      background-image: linear-gradient(
+        to right,
+        #e2e2e2 70%,
+        rgba(255, 255, 255, 0) 0%
+      );
       background-position: bottom;
       background-size: 1px 1px;
       background-repeat: repeat-x;
@@ -2960,4 +3043,11 @@ table .parent-row,
       border: 1px solid #e2e2e2;
     }
   }
+}
+
+input,
+textarea,
+select,
+option {
+  font-family: "proxima-regular";
 }
